--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "main": "server.js",
   "engines": {
-    "node": "^12.18.3"
+    "node": "18.x"
   },
   "scripts": {
     "start": "node ./server.js",
